--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
 this cvs module is where the bioperl cookbook is maintained.
 
-Primary maintainer is Kriz Boulez krbou@pgsgent.be 
+Primary maintainer is Kris Boulez krbou@pgsgent.be 
 
